Completed Java 21 upgrade with updated dependencies